[package]
name = "gameframe-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alphanumeric-sort = "1.5.1"
clap = { version = "4.2.4", features = ["derive"] }
image = "0.24.6"
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.7.3"
